--- a/calamares-3.2.61/PKGBUILD
+++ b/calamares-3.2.61/PKGBUILD
@@ -4,11 +4,11 @@ pkgname=calamares
 pkgver=3.2.61
 _pkgver=3.2.61
 pkgrel=6
-_commit=8a6b3d19e17d5a92d0ad8f743c55965f03ff9fac
+_commit=7f3d3746e16fd12f7e87e5ebe7acc30fd692711b
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
 license=(GPL)
-url="https://gitlab.manjaro.org/applications/calamares"
+url="https://github.com/calamares/calamares/releases/download"
 license=('LGPL')
 depends=('kconfig' 'kcoreaddons' 'kiconthemes' 'ki18n' 'kio' 'solid' 'yaml-cpp' 'kpmcore>=22.04.0' 'mkinitcpio-openswap'
          'boost-libs' 'ckbcomp' 'hwinfo' 'qt5-svg' 'polkit-qt5' 'gtk-update-icon-cache' 'plasma-framework'
@@ -20,18 +20,10 @@ backup=('usr/share/calamares/modules/bootloader.conf'
         'usr/share/calamares/modules/initcpio.conf'
         'usr/share/calamares/modules/unpackfs.conf')
 
-source+=(#"$pkgname-$pkgver-$pkgrel.tar.gz::$url/-/archive/v$pkgver/calamares-v$pkgver.tar.gz"
-         'https://gitlab.manjaro.org/codesardine/calamares/-/commit/b140b67c9fddb96701e46d23e9a72ddfbe77e0d0.patch'
-         'https://gitlab.manjaro.org/applications/calamares/-/merge_requests/37.patch'
-         "$pkgname-$pkgver-$pkgrel.tar.gz::$url/-/archive/$_commit/$pkgname-$_commit.tar.gz"
-        )
-sha256sums=('39c38180b6c7d6088984c300e3fdf125b571525d1d252b59a52388e1780f98e4'
-            '993c4d3babd7ead9a20fb43c338d3223f1531c55a2bdb0bf2dd899db22433214'
-            '081415e5d6a44691cb984ccaea276e113ec8a058ce12dd3b774640ad44aeacd8')
+source+=("$pkgname-$pkgver.tar.gz::$url/v$pkgver/calamares-$pkgver.tar.gz")
+sha256sums=('7591b9b60738bdba7b9de2b8da5462ab21006db06a006f0dd21ac5b832711dd2')
 
 prepare() {
-	mv ${srcdir}/calamares-${_commit} ${srcdir}/calamares-${pkgver}
-	#mv ${srcdir}/calamares-v${pkgver} ${srcdir}/calamares-${pkgver}
 	cd ${srcdir}/calamares-${pkgver}
 	sed -i -e 's/"Install configuration files" OFF/"Install configuration files" ON/' CMakeLists.txt
 	
@@ -44,17 +36,6 @@ prepare() {
 	sed -i -e "s|\${CALAMARES_VERSION_MAJOR}.\${CALAMARES_VERSION_MINOR}.\${CALAMARES_VERSION_PATCH}|${_ver}-${pkgrel}|g" CMakeLists.txt
 	sed -i -e "s|CALAMARES_VERSION_RC 1|CALAMARES_VERSION_RC 0|g" CMakeLists.txt
 	
-	# https://github.com/calamares/calamares/issues/2014
-	sed -i -e 's|"$@"|"-D6" "$@"|g' data/calamares_polkit
-
-	# change branding
-	sed -i -e "s/default/manjaro/g" src/branding/CMakeLists.txt
-	
-	# https://github.com/calamares/calamares/issues/1945
-	patch -Np1 -i ../b140b67c9fddb96701e46d23e9a72ddfbe77e0d0.patch
-	
-	# https://gitlab.manjaro.org/applications/calamares/-/merge_requests/37
-	patch -Np1 -i ../37.patch
 }
 
 build() {
