fixed minor bug

--- a/calamares-3.2.61/PKGBUILD
+++ b/calamares-3.2.61/PKGBUILD
@@ -57,8 +57,8 @@ build() {
 }
 
 package() {
-#	cd ${srcdir}/calamares-${pkgver}/build
-#	make DESTDIR="$pkgdir" install
+	cd ${srcdir}/calamares-${pkgver}/build
+	make DESTDIR="$pkgdir" install
 #	install -Dm644 "../data/manjaro-icon.svg" "$pkgdir/usr/share/icons/hicolor/scalable/apps/calamares.svg"
 #	install -Dm644 "../data/calamares.desktop" "$pkgdir/usr/share/applications/calamares.desktop"
 #	install -Dm755 "../data/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
