--- a/calamares-3.2.61/PKGBUILD
+++ b/calamares-3.2.61/PKGBUILD
@@ -57,7 +57,7 @@ build() {
 }
 
 package() {
-	cd ${srcdir}/calamares-${pkgver}/build
+	cd ${srcdir}/build
 	make DESTDIR="$pkgdir" install
 #	install -Dm644 "../data/manjaro-icon.svg" "$pkgdir/usr/share/icons/hicolor/scalable/apps/calamares.svg"
 #	install -Dm644 "../data/calamares.desktop" "$pkgdir/usr/share/applications/calamares.desktop"
